syntax = "proto3";

package filecenter;

service FileCenter {
    rpc Upload (UploadReq) returns (UploadResp) {
    }
}

// 文件上传
message UploadReq {
    string fileName = 1;
    string tempFileLocation = 2;
    int64 task = 3;
    string secret = 4;
}

message UploadResp {
}

